fix subscriber email align issue

--- a/src/assets/css/logged-user-styles.scss
+++ b/src/assets/css/logged-user-styles.scss
@@ -2233,10 +2233,6 @@ img.ui.avatar.image {
       }
     }
   }
-  .cubscribe {
-    max-width: 250px !important;
-    min-width: 170px !important;
-  }
 
   .exchange-note {
     margin-bottom: 8px !important;
